--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,10 @@ header {
     width: 50%;
     height: 500px;
 }
+table {
+    width: 100%;
+    margin-top: 10px;
+}
 #quote-main {
     text-align: center;
     height: 60px;
@@ -21,23 +25,23 @@ header {
     margin-left: auto;
     margin-right: auto; 
     width: 75%;
-    height: 870px;
+    height: 1000px;
 }
 #main-content {
     width: 66%;
-    height: 870px;
+    height: 1000px;
     float:left;
 }
 #side-content {
     width: 34%;
-    height: 870px;
+    height: auto;
     float:left;
 }
 #date-section{
     float: left;
     width: 15%;
 }
-#header-date{
+#header-main{
     width: 100%;
     height: 100px;
     padding-top: 10px;
@@ -45,6 +49,23 @@ header {
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: hsla(225, 3%, 52%, 0.56);
+}
+#header-side {
+    width: 100%;
+    height: 50px;
+    padding-top: 10px;
+    font-size: 40px;
+    text-align: center;
+    font-family: 'Patrick Hand', cursive;
+}
+#photo-side {
+    width: 90%;
+    height: 250px;
+    margin-top: 50px;
+    margin-left: 20%;
+    background-image: url('img/steve2.webp');
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 .date {
     height: 45px;
@@ -69,4 +90,20 @@ header {
 }
 .info:last-child {
     border-bottom: 1px solid hsla(220, 5%, 64%, 0.56);
+}
+.left-table {
+    width: 20%;
+    height: 60px;
+    font-size: px;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+}
+.right-table {
+background-color: aliceblue;
+    width: 80%;
+
+    height: 60px;
+    font-size: 14px;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
 }
